tests/snapshots/render_snapshots__features_color_80.snap
---
source: tests/render_snapshots.rs
assertion_line: 35
expression: "render(80, ColorDepth::TrueColor)"
---
[1;38;2;255;88;0mglance[0m[38;2;205;214;244m [0m[1;38;2;255;88;0mfeatures[0m
[38;2;255;88;0m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━[0m

[38;2;205;214;244mA[0m[38;2;205;214;244m [0m[1;38;2;205;214;244mfast[0m[38;2;205;214;244m [0m[38;2;205;214;244mterminal[0m[38;2;205;214;244m [0m[38;2;205;214;244mmarkdown[0m[38;2;205;214;244m [0m[38;2;205;214;244mviewer[0m[38;2;205;214;244m [0m[38;2;205;214;244mwith[0m[38;2;205;214;244m [0m[38;2;166;227;161minline[0m[38;2;205;214;244m [0m[38;2;166;227;161mcode[0m[38;2;205;214;244m,[0m[38;2;205;214;244m [0m[4;38;2;137;180;250ma[0m[4;38;2;137;180;250m [0m[4;38;2;137;180;250mlink[0m[38;2;205;214;244m [0m[38;2;205;214;244m(https://example.com)[0m[38;2;205;214;244m,[0m
[38;2;205;214;244mand[0m[38;2;205;214;244m [0m[3;38;2;205;214;244memphasis[0m[38;2;205;214;244m [0m[38;2;205;214;244m—[0m[38;2;205;214;244m [0m[38;2;205;214;244mthis[0m[38;2;205;214;244m [0m[38;2;205;214;244mparagraph[0m[38;2;205;214;244m [0m[38;2;205;214;244mis[0m[38;2;205;214;244m [0m[38;2;205;214;244mlong[0m[38;2;205;214;244m [0m[38;2;205;214;244menough[0m[38;2;205;214;244m [0m[38;2;205;214;244mto[0m[38;2;205;214;244m [0m[38;2;205;214;244mwrap[0m[38;2;205;214;244m [0m[38;2;205;214;244mat[0m[38;2;205;214;244m [0m[38;2;205;214;244mnarrow[0m[38;2;205;214;244m [0m[38;2;205;214;244mwidths[0m[38;2;205;214;244m [0m[38;2;205;214;244mso[0m[38;2;205;214;244m [0m[38;2;205;214;244mwe[0m
[38;2;205;214;244mexercise[0m[38;2;205;214;244m [0m[38;2;205;214;244mthe[0m[38;2;205;214;244m [0m[38;2;205;214;244mword[0m[38;2;205;214;244m [0m[38;2;205;214;244mwrapper[0m[38;2;205;214;244m [0m[38;2;205;214;244mand[0m[38;2;205;214;244m [0m[38;2;205;214;244mits[0m[38;2;205;214;244m [0m[38;2;205;214;244mhanging[0m[38;2;205;214;244m [0m[38;2;205;214;244mindents.[0m

[1;38;2;255;88;0mLists[0m
[38;2;108;112;134m────────────────────────────────────────────────────────────────────────────────[0m

[38;2;255;88;0m• [0m[38;2;205;214;244mfirst[0m[38;2;205;214;244m [0m[38;2;205;214;244mbullet[0m
[38;2;255;88;0m• [0m[38;2;205;214;244ma[0m[38;2;205;214;244m [0m[38;2;205;214;244mlonger[0m[38;2;205;214;244m [0m[38;2;205;214;244mbullet[0m[38;2;205;214;244m [0m[38;2;205;214;244mitem[0m[38;2;205;214;244m [0m[38;2;205;214;244mthat[0m[38;2;205;214;244m [0m[38;2;205;214;244mshould[0m[38;2;205;214;244m [0m[38;2;205;214;244mwrap[0m[38;2;205;214;244m [0m[38;2;205;214;244monto[0m[38;2;205;214;244m [0m[38;2;205;214;244ma[0m[38;2;205;214;244m [0m[38;2;205;214;244msecond[0m[38;2;205;214;244m [0m[38;2;205;214;244mcontinuation[0m[38;2;205;214;244m [0m[38;2;205;214;244mline[0m[38;2;205;214;244m [0m[38;2;205;214;244mwithout[0m
[38;2;205;214;244m  [0m[38;2;205;214;244mrepeating[0m[38;2;205;214;244m [0m[38;2;205;214;244mthe[0m[38;2;205;214;244m [0m[38;2;205;214;244mmarker[0m
[38;2;255;88;0m• [0m[38;2;205;214;244mnested[0m[38;2;205;214;244m [0m[38;2;205;214;244mcontent[0m[38;2;205;214;244m [0m[38;2;205;214;244mstays[0m[38;2;205;214;244m [0m[38;2;205;214;244maligned[0m

[38;2;255;88;0m1. [0m[38;2;205;214;244mordered[0m[38;2;205;214;244m [0m[38;2;205;214;244mone[0m
[38;2;255;88;0m2. [0m[38;2;205;214;244mordered[0m[38;2;205;214;244m [0m[38;2;205;214;244mtwo[0m

[38;2;255;88;0m✓ [0m[38;2;205;214;244ma[0m[38;2;205;214;244m [0m[38;2;205;214;244mcompleted[0m[38;2;205;214;244m [0m[38;2;205;214;244mtask[0m
[38;2;255;88;0m○ [0m[38;2;205;214;244man[0m[38;2;205;214;244m [0m[38;2;205;214;244mopen[0m[38;2;205;214;244m [0m[38;2;205;214;244mtask[0m

[1;38;2;255;88;0mCallouts[0m
[38;2;108;112;134m────────────────────────────────────────────────────────────────────────────────[0m

[38;2;255;88;0m▎ [0m[1;38;2;255;88;0mⓘ NOTE[0m
[38;2;255;88;0m▎ [0m[38;2;205;214;244mCallouts[0m[38;2;205;214;244m [0m[38;2;205;214;244mrender[0m[38;2;205;214;244m [0m[38;2;205;214;244mas[0m[38;2;205;214;244m [0m[38;2;205;214;244mtitled[0m[38;2;205;214;244m [0m[38;2;205;214;244mpanels[0m[38;2;205;214;244m [0m[38;2;205;214;244mwith[0m[38;2;205;214;244m [0m[38;2;205;214;244ma[0m[38;2;205;214;244m [0m[38;2;205;214;244mcolored[0m[38;2;205;214;244m [0m[38;2;205;214;244mbar[0m[38;2;205;214;244m [0m[38;2;205;214;244mdown[0m[38;2;205;214;244m [0m[38;2;205;214;244mthe[0m[38;2;205;214;244m [0m[38;2;205;214;244mside.[0m

[38;2;255;88;0m▎ [0m[1;38;2;255;88;0m⚠ WARNING[0m
[38;2;255;88;0m▎ [0m[38;2;205;214;244mThis[0m[38;2;205;214;244m [0m[38;2;205;214;244mone[0m[38;2;205;214;244m [0m[38;2;205;214;244mis[0m[38;2;205;214;244m [0m[38;2;205;214;244ma[0m[38;2;205;214;244m [0m[38;2;205;214;244mwarning,[0m[38;2;205;214;244m [0m[38;2;205;214;244mand[0m[38;2;205;214;244m [0m[38;2;205;214;244mits[0m[38;2;205;214;244m [0m[38;2;205;214;244mbody[0m[38;2;205;214;244m [0m[38;2;205;214;244malso[0m[38;2;205;214;244m [0m[38;2;205;214;244mwraps[0m[38;2;205;214;244m [0m[38;2;205;214;244minside[0m[38;2;205;214;244m [0m[38;2;205;214;244mthe[0m[38;2;205;214;244m [0m[38;2;205;214;244mpanel[0m[38;2;205;214;244m [0m[38;2;205;214;244mwhen[0m[38;2;205;214;244m [0m[38;2;205;214;244mit[0m[38;2;205;214;244m [0m[38;2;205;214;244mgets[0m
[38;2;255;88;0m▎ [0m[38;2;205;214;244mlong[0m[38;2;205;214;244m [0m[38;2;205;214;244menough.[0m

[1;38;2;255;88;0mQuote[0m[38;2;205;214;244m [0m[1;38;2;255;88;0mand[0m[38;2;205;214;244m [0m[1;38;2;255;88;0mcode[0m
[38;2;108;112;134m────────────────────────────────────────────────────────────────────────────────[0m

[38;2;255;88;0m▏ [0m[38;2;205;214;244ma[0m[38;2;205;214;244m [0m[38;2;205;214;244mplain[0m[38;2;205;214;244m [0m[38;2;205;214;244mblockquote,[0m[38;2;205;214;244m [0m[38;2;205;214;244mwrapped[0m[38;2;205;214;244m [0m[38;2;205;214;244mwith[0m[38;2;205;214;244m [0m[38;2;205;214;244ma[0m[38;2;205;214;244m [0m[38;2;205;214;244mbar[0m[38;2;205;214;244m [0m[38;2;205;214;244mprefix[0m[38;2;205;214;244m [0m[38;2;205;214;244mon[0m[38;2;205;214;244m [0m[38;2;205;214;244mevery[0m[38;2;205;214;244m [0m[38;2;205;214;244mline[0m[38;2;205;214;244m [0m[38;2;205;214;244mit[0m[38;2;205;214;244m [0m[38;2;205;214;244moccupies[0m

[38;2;203;166;247mfn[0m[38;2;166;227;161m [0m[38;2;137;180;250mmain[0m[38;2;166;227;161m() {[0m
[38;2;166;227;161m    [0m[38;2;203;166;247mlet[0m[38;2;166;227;161m [0m[38;2;166;227;161manswer[0m[38;2;166;227;161m = [0m[38;2;250;179;135m42[0m[38;2;166;227;161m; [0m[38;2;108;112;134m// the meaning[0m
[38;2;166;227;161m    [0m[38;2;166;227;161mprintln[0m[38;2;166;227;161m!([0m[38;2;166;227;161m"hello {}"[0m[38;2;166;227;161m, [0m[38;2;166;227;161manswer[0m[38;2;166;227;161m);[0m
[38;2;166;227;161m}[0m

[38;2;69;71;90m────────────────────────────────────────────────────────────────────────────────[0m

[38;2;205;214;244mDone.[0m
